# lootscout

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  config.example.toml  pyproject.toml
src/free_checker/: __init__.py  cli.py  feed.py  main.py  state.py  wizard.py
src/free_checker/channels/: base.py  email.py  ntfy.py  telegram.py
src/lootscout/: __init__.py  cli.py  config.py  feed.py  main.py  remove.py  status.py  wizard.py
src/lootscout/channels/: __init__.py  base.py  email.py  rss.py  telegram.py
tests/: sample_feed.json  test_cli.py  test_config.py  test_cron_install.py  test_cron_notice.py  test_feed.py  test_main.py  test_remove.py  test_state.py  test_status.py  test_wizard.py  test_wizard_autodetect.py  test_wizard_choices.py
tests/channels/: test_base.py  test_digest_protocol.py  test_email.py  test_ntfy.py  test_registry.py  test_required_secrets.py  test_rss.py  test_telegram.py  test_telegram_digest.py
