[project]
name = "free-checker"
version = "0.1.0"
description = "Notify on new free game giveaways (Steam/Epic/GOG/Xbox/Switch)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "questionary>=2.0",
    "tomli-w>=1.0",
    "qrcode>=7.4",
]

[project.scripts]
free-checker = "free_checker.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/free_checker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
