[project]
name = "lootscout"
version = "0.1.0"
description = "Notify on new free game giveaways (Steam/Epic/GOG/Xbox/Switch)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "questionary>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
lootscout = "lootscout.cli:main"

# Dev tooling lives in a dependency-group, which `uv sync` / `uv run` install
# by default — so `uv run pytest` works without any extra flag.
[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lootscout"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
